[project]
name = "webull-pnl"
version = "0.1.0"
description = "CLI report for realized P&L from Webull CSV exports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
webull-pnl = "webull_pnl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webull_pnl"]
